<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/contactadd_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/showevents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:background="@null"
            android:text="@string/contactadd_submit"
            android:textColor="@color/toolbarText"
            android:textSize="14sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/contactadd_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/contactadd_name"
        app:layout_constraintDimensionRatio="width,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactadd_toolbar"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.3"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactadd_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/contactadd_phone_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactadd_image"
        android:text="@string/contactadd_name"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactadd_phone_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/contactadd_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactadd_name"
        android:text="@string/contactadd_phone_label" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contactadd_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:inputType="phone"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/contactadd_duration_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactadd_phone_label"
        android:hint="@string/contactadd_phone_hint" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactadd_duration_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/contactadd_duration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactadd_phone"
        android:text="@string/contactadd_duration_label" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contactadd_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/contactadd_memo_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactadd_duration_label"
        android:hint="@string/contactadd_duration_hint" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactadd_memo_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/contactadd_memo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactadd_duration"
        android:text="@string/contactadd_memo_label" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contactadd_memo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:singleLine="true"
        android:hint="@string/contactadd_memo_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactadd_memo_label" />

</androidx.constraintlayout.widget.ConstraintLayout>