<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/contactrevise_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/contactrevise_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/contactrevise_addname"
        app:layout_constraintDimensionRatio="width,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactrevise_toolbar"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.3"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactrevise_addname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactrevise_name"
        app:layout_constraintBottom_toTopOf="@id/contactrevise_addphone_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactrevise_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactrevise_addphone_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/contactrevise_phone_label"
        app:layout_constraintBottom_toTopOf="@id/contactrevise_addphone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactrevise_addname" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contactrevise_addphone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/contactrevise_phone_hint"
        android:inputType="phone"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/contactrevise_addduration_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactrevise_addphone_label" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactrevise_addduration_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/contactrevise_duration_label"
        app:layout_constraintBottom_toTopOf="@id/contactrevise_addduration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactrevise_addphone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contactrevise_addduration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/contactrevise_duration_hint"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/contactrevise_memo_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactrevise_addduration_label" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactrevise_memo_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/contactrevise_memo_label"
        app:layout_constraintBottom_toTopOf="@id/contactrevise_memo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactrevise_addduration" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contactrevise_memo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/contactrevise_memo_hint"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactrevise_memo_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/contactrevise_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/contactrevise_delete"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:singleLine="true"
        android:textColorHint="@color/colorOrange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>