<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/contactdetail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/contactdetail_revise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:background="@null"
            android:text="@string/contactdetail_revise"
            android:textColor="@color/toolbarText"
            android:textSize="14sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/contactdetail_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_background"
        app:layout_constraintBottom_toTopOf="@id/contactdetail_name"
        app:layout_constraintDimensionRatio="width,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactdetail_toolbar"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.3"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactdetail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactdetail_name"
        app:layout_constraintBottom_toTopOf="@id/contactdetail_call"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactdetail_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/contactdetail_call"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_background"
        app:layout_constraintBottom_toTopOf="@id/contactdetail_phone_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactdetail_name"
        app:srcCompat="@drawable/ic_call_black_24dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/contactdetail_sms"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_background"
        app:layout_constraintTop_toTopOf="@id/contactdetail_call"
        app:layout_constraintLeft_toRightOf="@id/contactdetail_call"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/contactdetail_call"
        app:srcCompat="@drawable/ic_chat_black_24dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactdetail_phone_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/contactdetail_phone_label"
        app:layout_constraintBottom_toTopOf="@id/contactdetail_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactdetail_call" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contactdetail_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/contactdetail_phone_hint"
        android:inputType="phone"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/contactdetail_duration_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactdetail_phone_label" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactdetail_duration_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/contactdetail_duration_label"
        app:layout_constraintBottom_toTopOf="@id/contactdetail_duration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactdetail_phone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contactdetail_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/contactdetail_duration_hint"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/contactdetail_memo_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactdetail_duration_label" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contactdetail_memo_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/contactdetail_memo_label"
        app:layout_constraintBottom_toTopOf="@id/contactdetail_memo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactdetail_duration" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contactdetail_memo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/contactdetail_memo_hint"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactdetail_memo_label" />

</androidx.constraintlayout.widget.ConstraintLayout>